--- a/hacking/respuesta.html
+++ b/hacking/respuesta.html
@@ -364,7 +364,7 @@
                 <div class="blog-image-grande">
                     <img src="media/response8.png" alt="">
                 </div> 
-                <h6>Ejemplos</h6>
+                <h6>Casos de uso</h6>
                 <ol>
                     <li><marcador class="resaltado3">Bloqueo de malware con Falcon Prevent</marcador></li>
                     <p>CrowdStrike utiliza machine learning para bloquear automáticamente el malware conocido y desconocido antes de que infecte un sistema. Un ejemplo básico es la detección y bloqueo de un archivo ejecutable sospechoso descargado por un usuario desde un correo electrónico.</p>
@@ -529,7 +529,7 @@ condition:
                     <li><marcador class="resaltado2">Eficiencia en la detección: </marcador>Chronicle puede aplicar estas reglas a grandes volúmenes de datos rápidamente, permitiendo la detección temprana de amenazas.</li>
                     <li><marcador class="resaltado2">Automatización: </marcador>Las reglas YARA pueden automatizar la detección de malware, mejorando los tiempos de respuesta.</li>
                 </ul>
-                <h6>Ejemplos</h6>
+                <h6>Casos de uso</h6>
                 <ol>
                     <li><marcador class="resaltado3">Detección de amenazas con reglas predefinidas</marcador></li>
                     <p>Un analista de seguridad configura Chronicle para recibir datos de logs de red y aplicar reglas predefinidas que detectan intentos de acceso a IPs maliciosas. Cuando un usuario intenta acceder a un dominio relacionado con malware, Chronicle genera una alerta.</p>
