--- a/devops.html
+++ b/devops.html
@@ -53,6 +53,10 @@
             <img src="media/imagen38.svg" alt="Docker" class="article-image">
             <h2><a href="devops/docker.html">Docker</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="Kubernetes" class="article-image">
+            <h2><a href="devops/kubernetes.html">Kubernetes</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen38.svg" alt="En proceso" class="article-image">
