--- a/devops/kubernetes.html
+++ b/devops/kubernetes.html
@@ -645,7 +645,8 @@ E1110 13:59:06.019986	6223 cache.go:189] Error downloading kic artifacts:  not y
                     </section>
                     <section id="terminal__body">
                         <div id="terminal__prompt">
-                        <span id="terminal__prompt--command"><marcador class="user">ryuzak1@ubuntu:</marcador><marcador class="location">~</marcador><marcador class="bling">$&nbsp;</marcador><marcador class="tool">minikube</marcador> status <marcador class="param"></marcador></span>    
+                        <span id="terminal__prompt--command"><marcador class="user">ryuzak1@ubuntu:</marcador><marcador class="location">~</marcador><marcador class="bling">$&nbsp;</marcador><marcador class="tool">minikube</marcador> status <marcador class="param"></marcador></span>  
+                        <span id="terminal__prompt--cursor"></span>  
                         </div>
                         <div class="command-response-container">
                             <span id="terminal__prompt--response" class="multiline-text">minikube
