--- a/devops/kubernetes.html
+++ b/devops/kubernetes.html
@@ -557,7 +557,7 @@ spec:
                     <img src="media/kubernetes13.jpg" alt="">
                 </div>
                 <h2>Proyecto en K8s</h2>
-                <p>Primero, es necesario instalar Minikube, y el primer paso es asegurarse de tener Docker instalado en tu sistema, ya que Minikube utiliza contenedores para simular un clúster de Kubernetes.</p>
+                <p>❏ Primero, es necesario instalar Minikube, y el primer paso es asegurarse de tener Docker instalado en tu sistema, ya que Minikube utiliza contenedores para simular un clúster de Kubernetes.</p>
                 <p>Con Docker ya en funcionamiento, descarga Minikube desde su <a href="https://minikube.sigs.k8s.io/docs/drivers/" target="blank">sitio oficial</a> o instala directamente ejecutando el siguiente comando en Linux:</p>
                 <div class="contenedor">
                     <div class="etiqueta">
@@ -614,6 +614,7 @@ E1110 13:59:06.019986	6223 cache.go:189] Error downloading kic artifacts:  not y
                         </div>
                     </section>
                 </div>
+                <p>❏ Para configurar Kubernetes a través de la terminal, se debe contar con kubectl.</p>
                 <div class="contenedor">
                     <div class="etiqueta">
                         Usa el siguiente comando en tu terminal para instalar kubectl:
