--- a/devops/docker.html
+++ b/devops/docker.html
@@ -323,6 +323,7 @@
 [registries.search]
 registries = ['docker.io']
                 </div>
+                <p>❏ Verifica la instalación de Podman.</p>
                 <div id="terminal">
                     <section id="terminal__bar">
                         <div id="bar__buttons">
