--- a/devops/kubernetes.html
+++ b/devops/kubernetes.html
@@ -943,7 +943,7 @@ replicaset.apps/webapp-deployment-655ff6696b    1     	    1     	    1   	2m23s
                         </div>
                     </section>
                 </div>
-                <p>❏ Para obtener una lista de todos los recursos principales en un clúster de Kubernetes.</p>
+                <p>❏ Para obtener una lista de todos los pods en un clúster de Kubernetes.</p>
                 <div id="terminal">
                     <section id="terminal__bar">
                         <div id="bar__buttons">
@@ -1143,7 +1143,7 @@ minikube    Ready   control-plane   2d8h    v1.31.0   192.168.49.2  &lt;none&gt;
                         </div>
                     </section>
                 </div>
-                <p>❏ Puedes acceder a tu aplicación web desplegada en Minikube utilizando la IP proporcionada por minikube ip junto con el puerto expuesto de tu Service o Deployment.</p>
+                <p>❏ Puedes acceder a tu aplicación web desplegada en Minikube utilizando la IP proporcionada por el comando <marcador class="subrayado">minikube ip</marcador> junto con el puerto expuesto de tu Service o Deployment.</p>
                 <div class="contenedor">
                     <div class="etiqueta">
                         Para eliminar todos los servicios:
