--- a/ia/keras.html
+++ b/ia/keras.html
@@ -286,7 +286,7 @@
                 <div class="blog-image-grande">
                     <img src="media/keras6.png" alt="">
                 </div>
-                <h2>Funciones de Optimización</h2>
+                <h2>Algoritmos de Optimización</h2>
                 <p>La optimización es crucial para entrenar modelos de manera efectiva. Keras ofrece una variedad de funciones de pérdida y optimizadores para adaptarse a diferentes tipos de problemas y datos. Algunos optimizadores populares incluyen SGD (Descenso de Gradiente Estocástico), Adam y RMSprop.</p>
                 <p>Aquí hay una descripción de las funciones de optimización más comunes:</p>
                 <ol>
