--- a/ia/spark.html
+++ b/ia/spark.html
@@ -206,13 +206,13 @@ lr = LogisticRegression(featuresCol="características", labelCol="etiqueta")
 modelo = lr.fit(df)
                 </div>
                 <p>Para aprovechar al máximo PySpark, generalmente se usa en un clúster de Spark. Esto se puede configurar en servicios en la nube (como AWS o Google Cloud) o en sistemas distribuidos como Hadoop.</p>
-                <h2>Configuración del cluster</h2>
+                <h2>Ejemplos</h2>
                 <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Pyspark/PySpark.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con PySpark.</p>
                 <p>Para más ejemplos, visita la siguiente <a href="https://runawayhorse001.github.io/LearningApacheSpark/rdd.html#create-rdd" target="blank">página</a> con documentación relevante.</p>
                 <div class="blog-image-grande">
                     <img src="media/spark3.png" alt="">
                 </div>
-                <h2>Instalación</h2>
+                <h2>Configuración del cluster</h2>
                 <p>Para configurar un clúster de Spark con un maestro y dos workers, hay algunos pasos adicionales además de simplemente instalar pyspark. La instalación de pyspark te permitirá ejecutar Spark en tu computadora, pero no configura un clúster completo. Aquí te explico los pasos detallados para lograrlo en tu distribución de Linux:</p>
                 <ul>
                     <li>Paso 1: Instalar Java</li>
