--- a/ia/matplotlib.html
+++ b/ia/matplotlib.html
@@ -49,15 +49,15 @@
                 </div>
                 <h2>Características</h2>
                 <ul>
-                    <li><marcador class="resaltado4">Figuras y Subtramas: </marcador>En Matplotlib, una figura es el contenedor que contiene todos los elementos de la trama. Dentro de una figura, puedes crear una o más subtramas (también conocidas como ejes) donde realmente se dibujan los gráficos.</li>
-                    <li><marcador class="resaltado4">Tipos de Gráficos Soportados: </marcador>Matplotlib ofrece una amplia gama de tipos de gráficos, incluyendo gráficos de línea, gráficos de dispersión, histogramas, gráficos de barras, gráficos de torta, diagramas de caja y más.</li>
+                    <li><marcador class="resaltado8">Figuras y Subtramas: </marcador>En Matplotlib, una figura es el contenedor que contiene todos los elementos de la trama. Dentro de una figura, puedes crear una o más subtramas (también conocidas como ejes) donde realmente se dibujan los gráficos.</li>
+                    <li><marcador class="resaltado8">Tipos de Gráficos Soportados: </marcador>Matplotlib ofrece una amplia gama de tipos de gráficos, incluyendo gráficos de línea, gráficos de dispersión, histogramas, gráficos de barras, gráficos de torta, diagramas de caja y más.</li>
                 </ul>
                 <h2>Usos Comunes de Matplotlib</h2>
-                <ul>
-                    <li><marcador class="resaltado4">Exploración de Datos: </marcador>Matplotlib es una herramienta invaluable para la exploración inicial de datos. Puedes crear rápidamente gráficos simples para entender la distribución de tus datos, identificar tendencias y detectar patrones.</li>
-                    <li><marcador class="resaltado4">Presentación de Resultados: </marcador>Una vez que hayas analizado tus datos, Matplotlib te permite crear visualizaciones informativas y atractivas para presentar tus resultados. Ya sea en informes, presentaciones o publicaciones, las visualizaciones generadas con Matplotlib son altamente personalizables y de calidad de publicación.</li>
-                    <li><marcador class="resaltado4">Visualización de Procesos: </marcador>En el ámbito de la ingeniería y la ciencia, Matplotlib es ampliamente utilizado para visualizar el comportamiento de sistemas y procesos. Desde señales temporales hasta gráficos de contorno, Matplotlib proporciona herramientas para representar una amplia variedad de fenómenos.</li>
-                    <li><marcador class="resaltado4">Creación de Dashboards Interactivos: </marcador>Si bien Matplotlib es conocido principalmente por sus gráficos estáticos, también se puede integrar con herramientas como Jupyter Notebooks o bibliotecas de visualización interactiva como Plotly para crear dashboards interactivos y aplicaciones web.</li>
+                <ul style="list-style-type: none;">
+                    <li>∅ <marcador class="resaltado4">Exploración de Datos: </marcador>Matplotlib es una herramienta invaluable para la exploración inicial de datos. Puedes crear rápidamente gráficos simples para entender la distribución de tus datos, identificar tendencias y detectar patrones.</li>
+                    <li>∅ <marcador class="resaltado4">Presentación de Resultados: </marcador>Una vez que hayas analizado tus datos, Matplotlib te permite crear visualizaciones informativas y atractivas para presentar tus resultados. Ya sea en informes, presentaciones o publicaciones, las visualizaciones generadas con Matplotlib son altamente personalizables y de calidad de publicación.</li>
+                    <li>∅ <marcador class="resaltado4">Visualización de Procesos: </marcador>En el ámbito de la ingeniería y la ciencia, Matplotlib es ampliamente utilizado para visualizar el comportamiento de sistemas y procesos. Desde señales temporales hasta gráficos de contorno, Matplotlib proporciona herramientas para representar una amplia variedad de fenómenos.</li>
+                    <li>∅ <marcador class="resaltado4">Creación de Dashboards Interactivos: </marcador>Si bien Matplotlib es conocido principalmente por sus gráficos estáticos, también se puede integrar con herramientas como Jupyter Notebooks o bibliotecas de visualización interactiva como Plotly para crear dashboards interactivos y aplicaciones web.</li>
                 </ul>
                 <h2>Instalación</h2>
                 <p>Matplotlib es una librería de Python que puede instalarse fácilmente utilizando pip, el gestor de paquetes de Python.</p>
